@@ -90,73 +90,17 @@ int native_midi_detect()
 
 NativeMidiSong *native_midi_loadsong(const char *midifile)
 {
-	NativeMidiSong	*song = NULL;
-	MIDIEvent		*evntlist = NULL;
-	int				part_to_inst[32];
-	int				part_poly_max[32];
-	int				numParts = 0;
-	Uint16			ppqn;
-	SDL_RWops		*rw;
+	SDL_RWops *rw;
 
-	/* Init the arrays */
-	memset(part_poly_max,0,sizeof(part_poly_max));
-	memset(part_to_inst,-1,sizeof(part_to_inst));
-	
 	/* Attempt to load the midi file */
 	rw = SDL_RWFromFile(midifile, "rb");
-	if (rw) {
-		evntlist = CreateMIDIEventList(rw, &ppqn);
-		SDL_RWclose(rw);
-		if (!evntlist)
-			goto bail;
+	if (!rw) {
+		return NULL;
 	}
-
-	/* Allocate memory for the song struct */
-	song = malloc(sizeof(NativeMidiSong));
-	if (!song)
-		goto bail;
-
-	/* Build a tune sequence from the event list */
-	song->tuneSequence = BuildTuneSequence(evntlist, ppqn, part_poly_max, part_to_inst, &numParts);
-	if(!song->tuneSequence)
-		goto bail;
-
-	/* Now build a tune header from the data we collect above, create
-	   all parts as needed and assign them the correct instrument.
-	*/
-	song->tuneHeader = BuildTuneHeader(part_poly_max, part_to_inst, numParts);
-	if(!song->tuneHeader)
-		goto bail;
-	
-	/* Increment the instance count */
-	gInstaceCount++;
-	if (gTunePlayer == NULL)
-		gTunePlayer = OpenDefaultComponent(kTunePlayerComponentType, 0);
-
-	/* Finally, free the event list */
-	FreeMIDIEventList(evntlist);
-	
-	return song;
-	
-bail:
-	if (evntlist)
-		FreeMIDIEventList(evntlist);
-	
-	if (song)
-	{
-		if(song->tuneSequence)
-			free(song->tuneSequence);
-		
-		if(song->tuneHeader)
-			DisposePtr((Ptr)song->tuneHeader);
-
-		free(song);
-	}
-	
-	return NULL;
+	return native_midi_loadsong_RW(rw, 1);
 }
 
-NativeMidiSong *native_midi_loadsong_RW(SDL_RWops *rw)
+NativeMidiSong *native_midi_loadsong_RW(SDL_RWops *rw, int freerw)
 {
 	NativeMidiSong	*song = NULL;
 	MIDIEvent		*evntlist = NULL;
@@ -198,7 +142,10 @@ NativeMidiSong *native_midi_loadsong_RW(SDL_RWops *rw)
 
 	/* Finally, free the event list */
 	FreeMIDIEventList(evntlist);
-	
+
+	if (freerw) {
+		SDL_RWclose(rw);
+	}
 	return song;
 	
 bail:
@@ -216,6 +163,9 @@ bail:
 		free(song);
 	}
 	
+	if (freerw) {
+		SDL_RWclose(rw);
+	}
 	return NULL;
 }
 
